@@ -1,4 +1,8 @@
 
+2018-07-18  Edward Hart <edward.dan.hart@gmail.com>
+
+	* typeck.c: added checks for (RE)WRITE FILE f FROM literal (bug #411).
+
 2018-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* reserved.c, parser.y: added IBM's ALLOCATE format by including the
